[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/YesNoButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/MenuArrow.png" type="Texture" id=2]

[node name="ChoiceButton" type="TextureButton"]
margin_right = 24.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 9 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 24.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHOICE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -4.5
margin_right = -1.0
margin_bottom = 4.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_self_pressed"]
